welcome.lessons.welcome.methods.args.MethodsArgs.scala.error
Program:7: error: ';' expected but 'else' found.
 }else{
  ^Program:12: error: Unmatched closing brace '}' ignored here
}
^